# python-mcp-server

./: API_USAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
src/mcp_server/: __init__.py  api_server.py
