[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tejas Borate", email = "tejas.borate@waiin.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.2",
    "mcp>=1.21.2",
    "psutil>=7.1.3",
    "pyodbc>=5.3.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
mcp-server = "mcp_server:run"
mcp-api = "mcp_server.api_server:start_api_server"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
